If Force Field in Ridgid Body group, crash at first frame of animation on playback #36847

Closed
opened 2013-09-28 19:26:50 +02:00 by CodeManX · 3 comments
Member

%%%--- Operating System, Graphics card ---
Win 7, 64bit

- Blender version with error, and version that worked ---

2.69 testbuild 1, ?

- Short description of error ---

If a force field is in the Ridgid Body World's group, and you playback while moving around the force field, blender crashes instantly when it loops to frame 1.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open attached .blend
Alt+A to playback
G to grab force field, drag it around
As soon as the playback starts over at frame 1, blender crashes%%%

%%%--- Operating System, Graphics card --- Win 7, 64bit - Blender version with error, and version that worked --- 2.69 testbuild 1, ? - Short description of error --- If a force field is in the Ridgid Body World's group, and you playback while moving around the force field, blender crashes instantly when it loops to frame 1. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open attached .blend Alt+A to playback G to grab force field, drag it around As soon as the playback starts over at frame 1, blender crashes%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r60421, thanks for the report! :)%%%

%%%Fixed in r60421, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36847
No description provided.