Fix [#36847] If Force Field in Ridgid Body group, crash at first frame of animation on playback

Not all objects in RB group actually have a "rigid body object", needs to be checked.